看了一些配置项

--- a/redis.conf
+++ b/redis.conf
@@ -30,19 +30,28 @@
 # include /path/to/local.conf
 # include /path/to/other.conf
 
+# 如果你想覆盖include的配置，就把include放在文件开头。
+# 如果你想用include覆盖当前配置，就把include放在文件结尾。
+
 ################################ GENERAL  #####################################
 
 # By default Redis does not run as a daemon. Use 'yes' if you need it.
 # Note that Redis will write a pid file in /var/run/redis.pid when daemonized.
 daemonize no
 
+# redis默认不以daemon方式启动。daemon方式下会写一个pid文件，防止多实例共存。
+
 # When running daemonized, Redis writes a pid file in /var/run/redis.pid by
 # default. You can specify a custom pid file location here.
 pidfile /var/run/redis.pid
 
+# 可以指定daemon方式下的pid文件路径。
+
 # Accept connections on the specified port, default is 6379.
 # If port 0 is specified Redis will not listen on a TCP socket.
 port 6379
+
+# redis不管绑定多少ip，监听的端口总是相同的。如果指定为0则意味着不使用tcp。
 
 # TCP listen() backlog.
 #
@@ -53,6 +62,9 @@ port 6379
 # in order to get the desired effect.
 tcp-backlog 511
 
+# 指定tcp socket全连接队列的长度。但我们知道这个值最终的计算取决于
+# somaxconn和半连接队列长度以及向2的幂对齐，真的想指定合适的长度需要不断调整这些值。
+
 # By default Redis listens for connections from all the network interfaces
 # available on the server. It is possible to listen to just one or multiple
 # interfaces using the "bind" configuration directive, followed by one or
@@ -62,6 +74,8 @@ tcp-backlog 511
 #
 # bind 192.168.1.100 10.0.0.1
 # bind 127.0.0.1
+
+# 指定绑定到的ip。
 
 # Specify the path for the Unix socket that will be used to listen for
 # incoming connections. There is no default, so Redis will not listen
